chore: divide containers

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -6,11 +6,11 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../assets/styles/styled.css">
+        <link rel="stylesheet" href="../assets/styles/home.css">
     </head>
     <body>
         <header></header>
-        <main class="">
+        <main class="container">
             <div class="wrapper">
                 <div class="form-container">
                     <form class="form">
