chore: add basic note layout

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -37,7 +37,33 @@
                         </div>
                     </form>
                 </div>
-                <div class="notes-container"></div>
+                <div class="notes-container">
+                  <div class="todo-note-container">
+                    <div class="note-container">
+                        <header class="note-header">
+                            <h1 class="note-title">Studar React</h1>
+                            <span class="note-status"></span>
+                        </header>
+                        <div class="note-content">
+                            <p class="note-date">Data/Hora</p>
+                            <p class="note-description">Descrition</p>
+                        </div>
+                    </div>
+                </div>
+                  <div class="complet-note-container">
+                    <div class="note-container">
+                        <header class="note-header">
+                            <h1 class="note-title">Studar React</h1>
+                            <span class="note-status"></span>
+                        </header>
+                        <div class="note-content">
+                            <p class="note-date">Data/Hora</p>
+                            <p class="note-description">Descrition</p>
+
+                        </div>
+                </div>
+                </div>
+                </div>
             </div>
         </main>
         <footer></footer>
