feature: add formulary

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -7,29 +7,34 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../assets/styles/home.css">
+        <link rel="stylesheet" href="../assets/styles/reset.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+
     </head>
-    <body>
+    <body style="background-color: #F1E0FF;">
         <header></header>
         <main class="container">
             <div class="wrapper">
                 <div class="form-container">
                     <form class="form">
                         <div class="label-input-container" >
-                            <label class="label-field" for="title"></label>
+                            <label class="label-field" for="title">Task Title</label>
                             <input  class="input-field" id="title" name="title" type="text">
                         </div>
-                        <div class="label-input-container" >
-                            <div class="" >
-                                <label class="label-field" for="date"></label>
+                        <div class="date-time-fields-container" >
+                            <div class="label-input-container" >
+                                <label class="label-field" for="date">Date</label>
                                 <input class="input-field"  id="date" name="date" type="text">
                             </div>
                             <div class="label-input-container" >
-                                <label class="label-field" for="hour"></label>
+                                <label class="label-field" for="hour">Time</label>
                                 <input class="input-field"  id="hour" name="hour" type="text">
                             </div>
                         </div>
                         <div class="label-input-container" >
-                            <label class="label-field" for="content"></label>
+                            <label class="label-field" for="content">Content</label>
                             <input class="input-field" id="content" name="content" type="text">
                         </div>
                         <div class="label-input-container" >
