--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -18,7 +18,7 @@
         <main class="container">
             <div class="wrapper">
                 <div class="form-container">
-                    <form class="form">
+                    <form class="form" >
                         <div class="label-input-container" >
                             <label class="label-field" for="title">Task Title</label>
                             <input  class="input-field" id="title" name="title" type="text">
@@ -64,7 +64,6 @@
                         <div class="note-content">
                             <p class="note-date">Data/Hora</p>
                             <p class="note-description">Descrition</p>
-
                         </div>
                 </div>
                 </div>
@@ -73,4 +72,6 @@
         </main>
         <footer></footer>
     </body>
+    <script src="../scripts/home.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </html>
